<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context="com.slimgreen.davis.slimgreen.Login">

    <android.support.constraint.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@drawable/corners_login"
        android:padding="20dp"
        tools:context="com.slimgreen.davis.slimgreen.Login">

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:text="davidmapu"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:text="12345"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/icons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
