<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slimgreen.davis.slimgreen.SlimGreenService">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10sp"
        android:background="@drawable/corners"
        android:elevation="5dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btnEditPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/editPerfil"
            android:textColor="@color/icons"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961"
            android:layout_marginEnd="6dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutInfo"
        android:background="@drawable/corners_menu"
        android:elevation="1dp">

        <RelativeLayout
            android:id="@+id/layoutFormulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/corners"
            android:paddingBottom="10sp">

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/btnResponder"
                android:layout_below="@+id/btnResponder"
                android:text="TextView"
                android:textSize="12sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/forms" />

            <Button
                android:id="@+id/btnResponder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEstado"
                android:layout_marginRight="10sp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/btn_responder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintLeft_toRightOf="@+id/txtEstado"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtFormulario"
                android:layout_below="@+id/txtFormulario"
                android:text="TextView"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/txtFormulario"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:padding="4sp"
                android:text="Formularios"
                android:textColor="@color/icons"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutSugerencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/layoutFormulario"
            android:layout_margin="10sp"
            android:background="@drawable/corners"
            android:paddingBottom="10sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                app:srcCompat="@drawable/store2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="33dp" />

            <Button
                android:id="@+id/btnSugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView4"
                android:layout_marginLeft="15sp"
                android:layout_toEndOf="@+id/imageView4"
                android:text="@string/btn_sugerencias"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:padding="4sp"
                android:text="Sugerencias"
                android:textColor="@color/icons"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/layoutSugerencias"
            android:layout_margin="10sp"
            android:background="@drawable/corners"
            android:paddingBottom="10sp">

            <ImageView
                android:id="@+id/imageView40"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/textView20"
                android:layout_below="@+id/textView20"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                app:srcCompat="@drawable/worldwide"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="33dp" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView40"
                android:layout_marginLeft="15sp"
                android:layout_toEndOf="@+id/imageView40"
                android:text="@string/btn_buscar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:padding="4sp"
                android:text="Servicios"
                android:textColor="@color/icons"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
